flere ordredetaljer.html

--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -65,7 +65,7 @@
         </ul>
     </div>
     <div>
-        Status is system
+        Status in system
     </div>
     <div>
         Stykliste
