--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -67,11 +67,12 @@
         </ul>
     </div>
     <div class="card m-3">
+        <h5 class="card-header">Produkt og sælger information</h5>
         <div class="card-body">
-            <p class="card-text" th:text="${order}"></p>
+            <p class="card-text">Ordre ID: <span th:text="${order.orderID}"></span></p>
             <p class="card-text">Sælger: <span th:text="${order.salesPerson.name}"></span></p>
-            <p class="card-text">Ordren er betalt: <span th:text="${order.isPaid}"></span></p>
-            <p class="card-text">Seneste opdatering: <span th:text="${order.updatedAt}"></span></p>
+            <p class="card-text" th:if="${#ctx.session.user!=null}">Ordren er betalt: <span th:text="${order.isPaid}"></span></p>
+            <p class="card-text" th:if="${#ctx.session.user!=null}">Seneste opdatering: <span th:text="${order.updatedAt}"></span></p>
         </div>
     </div>
     <div class="card m-3" th:if="${#ctx.session.user!=null}">
@@ -110,7 +111,6 @@
 
                 </tbody>
             </table>
-            <p class="card-text" th:text="${order.carport.materialsList}"></p>
 
         </div>
     </div>
