--- a/src/main/resources/templates/kvittering.html
+++ b/src/main/resources/templates/kvittering.html
@@ -29,16 +29,44 @@
   </div>
 </nav>
 <div class="container mt-5 p-3 pt-5 bg-body-tertiary">
-  <h1>QuickByg v2024</h1>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deleniti, dolore nam perferendis placeat provident quas quibusdam quisquam! Aliquid delectus dolorem eum ex excepturi facilis officia ratione rerum sit tempora.
-  </p>
-  <p class="card-text">Ordren er betalt: <span th:text="${order.isPaid}"></span></p>
-  <form>
-    form content
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci corporis delectus fugit in ipsam, labore odit officia optio quaerat quasi quibusdam rerum voluptatibus! Adipisci nisi quaerat quis repudiandae sapiente voluptas!
-  </form>
-</div>
+  <div class="container p-0">
+    <div class="card px-4">
+      <p class="h8 py-3">Payment Details</p>
+      <div class="row gx-3">
+        <div class="col-12">
+          <div class="d-flex flex-column">
+            <p class="text mb-1">Person Name</p>
+            <input class="form-control mb-3" type="text" placeholder="Name" value="Barry Allen">
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="d-flex flex-column">
+            <p class="text mb-1">Card Number</p>
+            <input class="form-control mb-3" type="text" placeholder="1234 5678 435678">
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="d-flex flex-column">
+            <p class="text mb-1">Expiry</p>
+            <input class="form-control mb-3" type="text" placeholder="MM/YYYY">
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="d-flex flex-column">
+            <p class="text mb-1">CVV/CVC</p>
+            <input class="form-control mb-3 pt-2 " type="password" placeholder="***">
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="btn btn-primary mb-3">
+            <span class="ps-3">Pay</span>
+            <span class="fas fa-arrow-right"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p class="card-text">Ordren er betalt: <span th:text="${order.isPaid}"></span></p>
+  </div>
 <footer class="footer text-faded p-3 pt-5">
   Oplysninger, CVR.
 </footer>
