--- a/src/main/resources/templates/ordredetaljer.html
+++ b/src/main/resources/templates/ordredetaljer.html
@@ -121,18 +121,33 @@
 
     <div class="card m-3">
         <div class="row gx-3" th:if="${#ctx.session.user!=null}">
-            <div class="col"><a href="/assign" th:href="@{/assign/${order.orderID}}" class="ms-auto btn btn-lg btn-primary">Tildel</a></div>
-            <div class="col"><a href="/draw" th:href="@{/draw}" class="btn btn-lg btn-success">Send tilbud</a></div>
-            <div class="col"><a href="/draw" th:href="@{/draw}" class="me-auto btn btn-lg btn-warning">Ret tilbud</a></div>
+            <div class="col d-flex justify-content-start">
+                <form action="/assign" method="get">
+                    <input type="hidden" name="orderID" th:value="${order.orderID}">
+                    <button type="submit" class="ms-auto btn btn-lg btn-primary">Tildel</button>
+                </form>
+            </div>
+            <div class="col d-flex justify-content-center">
+                <form action="/draw" method="get">
+                    <button type="submit" class="btn btn-lg btn-success">Send tilbud</button>
+                </form>
+            </div>
+            <div class="col d-flex justify-content-end">
+                <form action="/draw" method="get">
+                    <button type="submit" class="me-auto btn btn-lg btn-warning">Ret tilbud</button>
+                </form>
+            </div>
         </div>
+    </div>
+    <div class="card m-3">
         <div class="row gx-3" th:if="${#ctx.session.user==null}">
-            <div class="col">
+            <div class="col d-flex justify-content-start">
                 <form method="post" action="/order/accept">
                 <input type="hidden" name="orderId" th:value="${order.orderID}">
                 <button type="submit" formaction="/order/accept" class="ms-auto btn btn-lg btn-success">Godkend Tilbud</button>
                 </form>
             </div>
-            <div class="col">
+            <div class="col d-flex justify-content-end">
                 <a href="/login" th:href="@{/login}" class="btn btn-lg btn-danger">Afvis Tilbud</a>
             </div>
         </div>
