rettet i fragments og tilføjet dem til drawing.html

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -28,6 +28,7 @@
                     <a class="nav-link" href="#" th:href="@{/orders}">Ordre oversigt</a>
                     <a class="nav-link" href="#" th:href="@{/order/1}">Ordre detaljer</a>
                     <a class="nav-link" href="#" th:href="@{/draw}">Tegning</a>
+                    <a class="nav-link" href="#" th:href="@{/bestilling}">Bestillingsformular</a>
                 </div>
             </div>
         </div>
