tilføjet fragment til login.html

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../public/css/styles.css" th:href="@{/css/styles.css}" />
 </head>
 <body>
+<header th:replace="~{fragments :: navbar}"></header>
 
 <form method="post" action="/login">
     <div class="form-group">
