--- a/src/main/resources/templates/ordreoversigt.html
+++ b/src/main/resources/templates/ordreoversigt.html
@@ -34,8 +34,8 @@
     <ul class="list-group list-group-flush">
         <p class="card-text">Here you will find an overview for this order.</p>
         <li class="list-group-item"><strong>Order ID:</strong> <span th:text="${orderu.orderId}"></span></li>
-        <li class="list-group-item"><strong>Customer ID:</strong> <span th:text="${orderu.customerID}"></span></li>
-        <li class="list-group-item"><strong>Sales ID:</strong> <span th:text="${orderu.salesPerson}"></span></li>
+        <li class="list-group-item"><strong>Customer ID:</strong> <span th:text="${orderu.customer.name}"></span></li>
+        <li class="list-group-item"><strong>Sales ID:</strong> <span th:text="${orderu.salesPerson.name}"></span></li>
     </ul>
     <div class="view-information">
         <a href="ordredetaljer.html" class="view" th:href="@{/view/{id}(id=${orderu.orderId})}">
